<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LogForwardAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Text and stuff -->
    <string name="activity_status_label">Status:</string>
    <string name="activity_status_unknown">unknown</string>
    <string name="activity_status_running">Running</string>
    <string name="activity_status_not_running">Not running</string>
    <string name="activity_button_start">Start</string>
    <string name="activity_button_stop">Stop</string>
    <string name="activity_button_settings">Settings</string>
    <string name="activity_button_check">Check</string>
    <string name="activity_text_settings">Start and stop the service for settings to take effect</string>
    
    <!-- Settings labels etc -->
    <string name="settings_header_main_summary">Set all settings</string>
    <string name="settings_header_main">Settings</string>
    <string name="settings_main">Settings</string>
    <string name="settings_logging_summary">What should be logged to the file?</string>
    <string name="settings_logging_title">Log Level</string>
    <string name="settings_log_file_summary">What should the log file be called?</string>
    <string name="settings_log_file_title">Log File</string>
    <string name="settings_network_port_title">Network Port</string>
    <string name="settings_network_port_summary">Network ports to listen on</string>
    <string name="settings_network_buffer_title">Network Buffer</string>
    <string name="settings_network_buffer_summary">Network Buffer Size (bigger than log file size is best)</string>
    <string name="settings_log_file_size_title">Log File Size</string>
    <string name="settings_log_file_size_summary">Size of the log file</string>
    <string name="settings_log_backup_qty_title">Log Count</string>
    <string name="settings_log_backup_qty_summary">How many log files can there be for backup</string>
    <!-- Settings default -->
    <string name="settings_default_log_name">LogForwardService.log</string>
    <!-- Settings Key -->
    <string name="settings_key_log_name">settings_log_name</string>
    <string name="settings_key_log_backup_qty">settings_log_backup_qty</string>
    <string name="settings_key_log_level">settings_log_level</string>
    <string name="settings_key_log_file_size">settings_log_file_size</string>
    <string name="settings_key_network_port">settings_network_port</string>
    <string name="settings_key_network_buffer">settings_network_buffer</string>

</resources>